Add Network.STUN for send/recv Binding Request/Response

--- a/stun.cabal
+++ b/stun.cabal
@@ -24,6 +24,7 @@ library
                      , largeword
                      , network
                      , text
+                     , cryptonite
 
 test-suite hlint
   hs-source-dirs:      test
