--- a/stun.cabal
+++ b/stun.cabal
@@ -21,7 +21,7 @@ source-repository head
 library
   hs-source-dirs:      src
   exposed-modules:     Network.STUN
-                     , Network.STUN.RFC5389
+                     , Network.STUN.Internal
   default-language:    Haskell2010
   ghc-options:         -Wall
   build-depends:       base
