--- a/stun.cabal
+++ b/stun.cabal
@@ -51,6 +51,7 @@ test-suite test
   build-depends:       base
                      , bytestring
                      , cereal
+                     , network
                      , text
                        -- testing deps
                      , tasty
