Add support for STUN Fingerprint attribute
Fingerprint (ITU V.42 CRC32) is verified when parsing messages with
parseSTUNMessage. Fingerprint is calculated and put in encoded message
if STUNMessage has Fingerprint attribute present before calling
produceSTUNMessage.

--- a/stun.cabal
+++ b/stun.cabal
@@ -27,6 +27,7 @@ library
   build-depends:       base
                      , bytestring
                      , cereal
+                     , digest
                      , network
                      , text
                      , cryptonite
