Implement STUN Message-Integrity attribute handling

--- a/stun.cabal
+++ b/stun.cabal
@@ -27,10 +27,11 @@ library
   build-depends:       base
                      , bytestring
                      , cereal
+                     , cryptonite
                      , digest
+                     , memory
                      , network
                      , text
-                     , cryptonite
 
 test-suite hlint
   hs-source-dirs:      test
