--- a/stun.cabal
+++ b/stun.cabal
@@ -46,6 +46,7 @@ test-suite test
   hs-source-dirs:      test
   main-is:             test.hs
   other-modules:       RFC5769
+                     , PacketSamples
                      , SmallCheck
   default-language:    Haskell2010
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
@@ -53,6 +54,7 @@ test-suite test
   build-depends:       base
                      , bytestring
                      , cereal
+                     , memory
                      , network
                      , text
                        -- testing deps
