More testing to STUN Attributes and fixes to found issues

--- a/stun.cabal
+++ b/stun.cabal
@@ -62,4 +62,5 @@ test-suite test
                      , tasty-hunit
                      , tasty-smallcheck
                      , smallcheck
+                     , smallcheck-series
                      , stun
